--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ swagger:
   version:  1.0.0
   terms-of-service-url: www.baidu.com
   contact:
-    name: yanfei
+    name: abbott
     email: 649471699@qq.com
     url: www.baidu.com
   base-package: com.example
@@ -18,4 +18,3 @@ swagger:
     key-name: token
     type: ApiKey
     name: Authorization
-  base-path:
